[gd_scene load_steps=22 format=3 uid="uid://x3f1qkrtcjn2"]

[ext_resource type="Script" path="res://markerio/markerio.gd" id="1_jbn2y"]
[ext_resource type="Texture2D" uid="uid://13prndas001w" path="res://markerio/markerio_spritesheet.png" id="2_b7xe3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="12_gbouc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="13_xqiof"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="14_tu1hp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="15_2tqr0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="16_rwijp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="17_1q33g"]
[ext_resource type="PackedScene" uid="uid://b0b3sj4mjwk0t" path="res://markerio/invincibility_effect/invincibility_effect.tscn" id="24_4sbhp"]
[ext_resource type="Script" path="res://markerio/invincibility_effect/invincibility_effect.gd" id="24_eusmg"]

[sub_resource type="Animation" id="Animation_wi0cs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(482, 686)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -349)]
}

[sub_resource type="Animation" id="Animation_gaccx"]
resource_name = "idle_big"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(574, 1350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -681)]
}

[sub_resource type="Animation" id="Animation_4g2dr"]
resource_name = "idle_flower"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(574, 1350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -681)]
}

[sub_resource type="Animation" id="Animation_i5ebo"]
resource_name = "idle_small"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(482, 686)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -349)]
}

[sub_resource type="Animation" id="Animation_o8krv"]
resource_name = "run_big"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(574, 1350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -681)]
}

[sub_resource type="Animation" id="Animation_ffpxy"]
resource_name = "run_flower"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(574, 1350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -681)]
}

[sub_resource type="Animation" id="Animation_8kfs1"]
resource_name = "run_small"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("terrain_collider:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(482, 686)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("terrain_collider:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -349)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoikk"]
_data = {
"RESET": SubResource("Animation_wi0cs"),
"idle_big": SubResource("Animation_gaccx"),
"idle_flower": SubResource("Animation_4g2dr"),
"idle_small": SubResource("Animation_i5ebo"),
"run_big": SubResource("Animation_o8krv"),
"run_flower": SubResource("Animation_ffpxy"),
"run_small": SubResource("Animation_8kfs1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hp0g"]
size = Vector2(482, 686)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ida"]
size = Vector2(482, 529)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l02rq"]
size = Vector2(482, 160)

[node name="Markerio" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_jbn2y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -708.315)
texture = ExtResource("2_b7xe3")
hframes = 5
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uoikk")
}

[node name="terrain_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -349)
shape = SubResource("RectangleShape2D_2hp0g")

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(0, -349)
collision_layer = 16
collision_mask = 0

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -78.5)
shape = SubResource("RectangleShape2D_f1ida")

[node name="stomp_hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="stomp_hitbox"]
position = Vector2(0, -81)
shape = SubResource("RectangleShape2D_l02rq")

[node name="InvincibilityEffect" parent="." instance=ExtResource("24_4sbhp")]
visible = false
script = ExtResource("24_eusmg")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("12_gbouc")

[node name="root" type="Node" parent="StateChart"]
script = ExtResource("13_xqiof")

[node name="Behavior" type="Node" parent="StateChart/root"]
script = ExtResource("14_tu1hp")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateChart/root/Behavior"]
script = ExtResource("15_2tqr0")

[node name="On airborne_without_jump" type="Node" parent="StateChart/root/Behavior/Grounded"]
script = ExtResource("16_rwijp")
to = NodePath("../../Airborne/Jumping States/Cannot Jump")
event = &"airborne_without_jump"

[node name="Airborne" type="Node" parent="StateChart/root/Behavior"]
script = ExtResource("13_xqiof")

[node name="Jumping States" type="Node" parent="StateChart/root/Behavior/Airborne"]
script = ExtResource("14_tu1hp")
initial_state = NodePath("Coyote Jump Enabled")

[node name="Coyote Jump Enabled" type="Node" parent="StateChart/root/Behavior/Airborne/Jumping States"]
script = ExtResource("15_2tqr0")

[node name="On Jump" type="Node" parent="StateChart/root/Behavior/Airborne/Jumping States/Coyote Jump Enabled"]
script = ExtResource("16_rwijp")
to = NodePath("../../Cannot Jump")
event = &"jump"

[node name="On Timeout" type="Node" parent="StateChart/root/Behavior/Airborne/Jumping States/Coyote Jump Enabled"]
script = ExtResource("16_rwijp")
to = NodePath("../../Cannot Jump")
delay_seconds = 0.1

[node name="Cannot Jump" type="Node" parent="StateChart/root/Behavior/Airborne/Jumping States"]
script = ExtResource("15_2tqr0")

[node name="Gravity Control" type="Node" parent="StateChart/root/Behavior/Airborne"]
script = ExtResource("14_tu1hp")
initial_state = NodePath("Normal Grav")

[node name="Normal Grav" type="Node" parent="StateChart/root/Behavior/Airborne/Gravity Control"]
script = ExtResource("15_2tqr0")

[node name="On started_falling" type="Node" parent="StateChart/root/Behavior/Airborne/Gravity Control/Normal Grav"]
script = ExtResource("16_rwijp")
to = NodePath("../../Heavy Grav")
event = &"started_falling"

[node name="Heavy Grav" type="Node" parent="StateChart/root/Behavior/Airborne/Gravity Control"]
script = ExtResource("15_2tqr0")

[node name="On on_floor" type="Node" parent="StateChart/root/Behavior/Airborne"]
script = ExtResource("16_rwijp")
to = NodePath("../../Grounded")
event = &"on_floor"

[node name="Animations" type="Node" parent="StateChart/root"]
script = ExtResource("14_tu1hp")
initial_state = NodePath("idle_small")

[node name="idle_small" type="Node" parent="StateChart/root/Animations"]
script = ExtResource("17_1q33g")
animation_player = NodePath("../../../../AnimationPlayer")

[node name="on moving" type="Node" parent="StateChart/root/Animations/idle_small"]
script = ExtResource("16_rwijp")
to = NodePath("../../run_small")
event = &"moving"

[node name="run_small" type="Node" parent="StateChart/root/Animations"]
script = ExtResource("17_1q33g")
animation_player = NodePath("../../../../AnimationPlayer")

[node name="on idle" type="Node" parent="StateChart/root/Animations/run_small"]
script = ExtResource("16_rwijp")
to = NodePath("../../idle_small")
event = &"idle"

[connection signal="area_entered" from="stomp_hitbox" to="." method="_on_stomp_hitbox_area_entered"]
[connection signal="state_physics_processing" from="StateChart/root/Behavior/Grounded" to="." method="_on_grounded_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/root/Behavior/Grounded" to="." method="_on_jump_enabled_state_physics_processing"]
[connection signal="state_processing" from="StateChart/root/Behavior/Grounded" to="." method="_on_grounded_state_processing"]
[connection signal="state_physics_processing" from="StateChart/root/Behavior/Airborne" to="." method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="StateChart/root/Behavior/Airborne/Gravity Control/Normal Grav" to="." method="_on_normal_grav_state_entered"]
[connection signal="state_physics_processing" from="StateChart/root/Behavior/Airborne/Gravity Control/Normal Grav" to="." method="_on_pre_apex_state_physics_processing"]
[connection signal="state_entered" from="StateChart/root/Behavior/Airborne/Gravity Control/Heavy Grav" to="." method="_on_post_apex_state_entered"]
